--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
         <script type="text/javascript" src="timelineDP.js"></script>
         <script src="jquery.transform2d.js"></script>
+        <script type="text/ecmascript" src="helper_functions.js" ></script>
+	<script type="text/ecmascript" src="textFlow.js" ></script>
         
 
     </body>
