--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>DP Timeline Graphic</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
